# gRPC-Examples

./: CMakeLists.txt  README.md
docker/: grpc.Dockerfile
grpc/: CMakeLists.txt
grpc/arithmetics/: CMakeLists.txt  arithmetics_client.cc  arithmetics_server.cc
grpc/greetings/: CMakeLists.txt  greetings_client.cc  greetings_server.cc
protos/: CMakeLists.txt  arithmetics.proto  greetings.proto
